// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getFileSizes > counts gzip and brotli sizes 1`] = `
[
  {
    "brotli": 1395,
    "file": "tests/fixtures/data/foo.md",
    "gzip": 1484,
    "raw": 2519,
  },
  {
    "brotli": null,
    "file": "tests/fixtures/data/image.png",
    "gzip": null,
    "raw": 17346,
  },
  {
    "brotli": 2193,
    "file": "tests/fixtures/data/lorem.md",
    "gzip": 2410,
    "raw": 4183,
  },
  {
    "brotli": 1142,
    "file": "tests/fixtures/data/lorem.txt",
    "gzip": 1205,
    "raw": 2877,
  },
]
`;

exports[`getFileSizes > counts raw sizes by default 1`] = `
[
  {
    "brotli": null,
    "file": "tests/fixtures/data/foo.md",
    "gzip": null,
    "raw": 2519,
  },
  {
    "brotli": null,
    "file": "tests/fixtures/data/image.png",
    "gzip": null,
    "raw": 17346,
  },
  {
    "brotli": null,
    "file": "tests/fixtures/data/lorem.md",
    "gzip": null,
    "raw": 4183,
  },
  {
    "brotli": null,
    "file": "tests/fixtures/data/lorem.txt",
    "gzip": null,
    "raw": 2877,
  },
]
`;

exports[`getFilesFromGlobs > supports globs 1`] = `
[
  "tests/fixtures/data/lorem.txt",
  "tests/fixtures/data/lorem.md",
  "tests/fixtures/data/foo.md",
]
`;

exports[`getFilesFromGlobs > treats strings without dynamic patterns as paths 1`] = `
[
  "tests/fixtures/data/lorem.txt",
  "tests/fixtures/data/lorem.md",
  "tests/fixtures/data/foo.md",
]
`;
